--- a/package.json
+++ b/package.json
@@ -14,8 +14,15 @@
   ],
   "main": "build/lib/Cli.js",
   "types": "build/lib/Cli.d.ts",
-  "dependencies": {},
+  "dependencies": {
+    "command-line-args": "5.1.1",
+    "command-line-commands": "3.0.1",
+    "command-line-usage": "6.1.0"
+  },
   "devDependencies": {
+    "@types/command-line-args": "5.0.0",
+    "@types/command-line-commands": "2.0.1",
+    "@types/command-line-usage": "5.0.1",
     "roboter": "10.0.5",
     "semantic-release-configuration": "1.0.6"
   },
