--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
   "dependencies": {
     "command-line-args": "5.1.1",
     "command-line-commands": "3.0.1",
-    "command-line-usage": "6.1.0"
+    "command-line-usage": "6.1.0",
+    "string-similarity": "4.0.1"
   },
   "devDependencies": {
     "@types/command-line-args": "5.0.0",
     "@types/command-line-commands": "2.0.1",
     "@types/command-line-usage": "5.0.1",
+    "@types/string-similarity": "3.0.0",
     "assertthat": "5.1.0",
     "record-stdstreams": "3.0.0",
     "roboter": "10.0.5",
