--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "@types/command-line-args": "5.0.0",
     "@types/command-line-commands": "2.0.1",
     "@types/command-line-usage": "5.0.1",
+    "@types/sinon": "7.5.1",
     "@types/string-similarity": "3.0.0",
     "assertthat": "5.1.0",
     "record-stdstreams": "3.0.0",
     "roboter": "10.0.5",
-    "semantic-release-configuration": "1.0.6"
+    "semantic-release-configuration": "1.0.6",
+    "sinon": "8.1.1"
   },
   "repository": {
     "type": "git",
