--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
       "email": "hannes.leutloff@thenativeweb.io"
     }
   ],
-  "main": "build/lib/Cli.js",
-  "types": "build/lib/Cli.d.ts",
+  "main": "build/lib/index.js",
+  "types": "build/lib/index.d.ts",
   "dependencies": {
     "command-line-args": "5.1.1",
     "command-line-commands": "3.0.1",
